{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 59,
  "lineage": "0b41482c-68d9-6e11-ce3b-dab871c38343",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg_vnet-desco",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6bf4720d-ba5b-46c2-a93a-c5c109d0399f/resourceGroups/rg-desco/providers/Microsoft.Network/networkSecurityGroups/nsg-vnet-desco",
            "location": "eastus",
            "name": "nsg-vnet-desco",
            "resource_group_name": "rg-desco",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_desco"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sr_allow-inbound-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6bf4720d-ba5b-46c2-a93a-c5c109d0399f/resourceGroups/rg-desco/providers/Microsoft.Network/networkSecurityGroups/nsg-vnet-desco/securityRules/sr-allow-inbound-access",
            "name": "sr-allow-inbound-access",
            "network_security_group_name": "nsg-vnet-desco",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-desco",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sg_vnet-desco",
            "azurerm_resource_group.rg_desco"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_ext_dmz_irtech_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.ContainerInstance/containerGroups"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6bf4720d-ba5b-46c2-a93a-c5c109d0399f/resourceGroups/rg-desco/providers/Microsoft.Network/virtualNetworks/vnet-desco/subnets/subnet-ext-dmz-irtech-0",
            "name": "subnet-ext-dmz-irtech-0",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-desco",
            "virtual_network_name": "vnet-desco"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snsga_subnet-ext-dmz-irtech-0_sg-vnet-desco",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6bf4720d-ba5b-46c2-a93a-c5c109d0399f/resourceGroups/rg-desco/providers/Microsoft.Network/virtualNetworks/vnet-desco/subnets/subnet-ext-dmz-irtech-0",
            "network_security_group_id": "/subscriptions/6bf4720d-ba5b-46c2-a93a-c5c109d0399f/resourceGroups/rg-desco/providers/Microsoft.Network/networkSecurityGroups/nsg-vnet-desco",
            "subnet_id": "/subscriptions/6bf4720d-ba5b-46c2-a93a-c5c109d0399f/resourceGroups/rg-desco/providers/Microsoft.Network/virtualNetworks/vnet-desco/subnets/subnet-ext-dmz-irtech-0"
          },
          "dependencies": [
            "azurerm_network_security_group.sg_vnet-desco",
            "azurerm_resource_group.rg_desco",
            "azurerm_subnet.subnet_ext_dmz_irtech_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_desco",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8",
              "192.168.0.0/16",
              "172.16.0.0/12"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2bd58be0-eff2-4f5c-b200-7d22f8919e46",
            "id": "/subscriptions/6bf4720d-ba5b-46c2-a93a-c5c109d0399f/resourceGroups/rg-desco/providers/Microsoft.Network/virtualNetworks/vnet-desco",
            "location": "eastus",
            "name": "vnet-desco",
            "resource_group_name": "rg-desco",
            "subnet": [
              {
                "address_prefix": "192.168.10.0/24",
                "id": "/subscriptions/6bf4720d-ba5b-46c2-a93a-c5c109d0399f/resourceGroups/rg-desco/providers/Microsoft.Network/virtualNetworks/vnet-desco/subnets/subnet-ext-dmz-irtech-0",
                "name": "subnet-ext-dmz-irtech-0"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}